Complete conversion to typescript + make work

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <body>
 
         <canvas id="main" width="640" height="480"></canvas>
-        <script src="dist/core.js"></script>
-        <script src="dist/pong.js"></script>
-        
+
+        <script src="bundle.js"></script>
     </body>
 </html>
